--- a/client/src/pages/mainPage/MainPage.css
+++ b/client/src/pages/mainPage/MainPage.css
@@ -27,9 +27,9 @@
 }
 .main__block{
     width: 50%;
-    height: 90%;
+    min-height: 800px;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.1);
